--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -6,21 +6,34 @@ metadata:
     kubernetes.io/ingress.class: 'nginx'
     nginx.ingress.kubernetes.io/use-regex: 'true'
     nginx.ingress.kubernetes.io/rewrite-target: /$1
+    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
+    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
 spec:
+  tls:
+    - hosts:
+        - arendaphone.email
+        - www.arendaphone.email
+      secretName: arendaphone-email-tls
   rules:
-    - http:
+    - host: arendaphone.email
+      http:
         paths:
           - path: /?(.*)
-            pathType: Prefix
             backend:
-              service:
-                name: client-cluster-ip-service
-                port:
-                  number: 3000
+              serviceName: client-cluster-ip-service
+              servicePort: 3000
           - path: /api/?(.*)
-            pathType: Prefix
             backend:
-              service:
-                name: server-cluster-ip-service
-                port:
-                  number: 5000
+              serviceName: server-cluster-ip-service
+              servicePort: 5000
+    - host: www.arendaphone.email
+      http:
+        paths:
+          - path: /?(.*)
+            backend:
+              serviceName: client-cluster-ip-service
+              servicePort: 3000
+          - path: /api/?(.*)
+            backend:
+              serviceName: server-cluster-ip-service
+              servicePort: 5000
